--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </section>
     <section> ABRE UMA NOVA SEÇÃO EM QUE OS VÍDEOS VÃO FICAR LADO A LADO NA PARTE DEBAIXO DA PÁGINA. 
-        <h2> çççççççç </h2>
+        <h2> melhores e mais ouvidas Jorge e Mateus </h2>
         <div class=" categoria-vídeos"> 
 
 
