--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div>  Playlist
             <h1> Playlist de musicas que eu gosto e esuto no meu dia a dia  </h1>
-            <p> ABRE E FECHA O PARÁGRA </p>
+            <p>  </p>
         </div>
 
 
@@ -27,11 +27,11 @@
         </div>
     </section>
     <section> ABRE UMA NOVA SEÇÃO EM QUE OS VÍDEOS VÃO FICAR LADO A LADO NA PARTE DEBAIXO DA PÁGINA. 
-        <h2> melhores e mais ouvidas Jorge e Mateus </h2>
+        <h2> As 5 Melhores e Mais Ouvidas Jorge e Mateus </h2>
         <div class=" categoria-vídeos"> 
 
 
-ESCOLHA 5 VÍDEOS PARA COLOCAR NO SITE PARA RELACIONAR COM O TEMA ESCOLHIDO
+
             <a href="https://www.youtube.com/watch?v=9bFHsd3o1w0">
 
 
