--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </div>
     </section>
-    <section> ABRE UMA NOVA SEÇÃO EM QUE OS VÍDEOS VÃO FICAR LADO A LADO NA PARTE DEBAIXO DA PÁGINA. 
+    <section>
         <h2> As 5 Melhores e Mais Ouvidas Jorge e Mateus </h2>
         <div class=" categoria-vídeos"> 
 
