--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section>
         <div>  Playlist
-            <h1> Playlist de musicas que eu gosto e esuto no meu dia a dia  </h1>
+            <h1> Playlist de musicas  </h1>
             <p>  </p>
         </div>
 
