--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <section>
-        <div>  Playlist
+        <div> 
             <h1> Playlist de musicas  </h1>
             <p>  </p>
         </div>
